commit translated contents

--- a/articles/active-directory/develop/index.yml
+++ b/articles/active-directory/develop/index.yml
@@ -1,10 +1,4 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: ab6fd4a2becde56ed538581561eb170f25c57278
-ms.sourcegitcommit: 3aa0fbfdde618656d66edf7e469e543c2aa29a57
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 02/05/2019
-ms.locfileid: "55728919"
 documentType: LandingData
 title: Microsoft Identity Platform (Azure Active Directory för utvecklare)
 metadata:
@@ -21,242 +15,242 @@ metadata:
   ms.date: 09/24/2018
   ms.author: celested
 abstract:
-  description: Microsoft Identity-plattformen är en utveckling av identitetstjänsten och utvecklingsplattformen Azure Active Directory (Azure AD). Den hjälper utvecklare att bygga program som loggar in alla Microsoft-identiteter, får tokens för att anropa Microsoft Graph, andra Microsoft API:er eller API:er som utvecklare har byggt. Det är en fullständig plattform som består av en autentiseringstjänst, bibliotek med öppen källkod, programregistrering och -konfiguration, fullständig utvecklardokumentation, kodexempel och annat innehåll för utvecklare. Microsoft Identity-plattformen stöder branschstandardprotokoll som OAuth 2.0 och OpenID Connect.
+  description: 'Microsoft Identity-plattformen är en utveckling av identitetstjänsten och utvecklingsplattformen Azure Active Directory (Azure AD). Den hjälper utvecklare att bygga program som loggar in alla Microsoft-identiteter och hämtar tokens för att anropa Microsoft API:er som Microsoft Graph eller API:er som utvecklare har byggt. Det är en plattform med fullständiga funktioner som består av en OAuth 2.0- och OpenID Connect -standardkompatibel autentiseringstjänst, bibliotek med öppen källkod, programregistrering och konfiguration, driftsäker begreppsrelaterad dokumentation och referensdokumentation, ”snabbstartsexempel ”, kodexempel, självstudier och instruktionsguider.'
   aside:
     image:
-      alt: 
+      alt: null
       height: 110
       src: ./media/index/video-featured.png
       width: 250
-    title: Skapa webbapplösningar med autentisering (9:31)
-    href: https://www.youtube.com/watch?v=QWh5HZK9vRA
+    title: 'Skapa webbapplösningar med autentisering (9:31)'
+    href: 'https://www.youtube.com/watch?v=QWh5HZK9vRA'
     width: 250
 sections:
-- items:
-  - type: list
-    style: cards
-    className: cardsM
-    columns: 3
+  - items:
+      - type: list
+        style: cards
+        className: cardsM
+        columns: 3
+        items:
+          - href: /azure/active-directory/develop/about-microsoft-identity-platform
+            html: <p>Läs mer om Microsoft Identity-plattformen och dess funktioner och möjligheter.</p>
+            image:
+              src: ./media/index/i_get-started.svg
+            title: Om Microsoft Identity-plattformen
+          - href: /azure/active-directory/develop/azure-ad-developers-guide/
+            html: '<p>Autentisera Azure AD-identiteter (arbets- och skolkonton) genom att begära token från slutpunkten Azure AD v1.0 med hjälp av Azure AD Authentication Library (ADAL), Azure-portalen och Azure AD Graph API.</p>'
+            image:
+              src: ./media/index/i_advanced.svg
+            title: V1.0
+          - href: /azure/active-directory/develop/v2-overview
+            html: '<p>Autentisera en bredare uppsättning Microsoft-identiteter via slutpunkten Azure AD v2.0 med hjälp av Microsoft Authentication Library (MSAL), Azure-portalen och Microsoft Graph API.</p>'
+            image:
+              src: ./media/index/i_investigate.svg
+            title: v2.0
+  - title: Snabbstarter
     items:
-    - href: /azure/active-directory/develop/about-microsoft-identity-platform
-      html: <p>Läs mer om Microsoft Identity-plattformen och dess funktioner och möjligheter.</p>
-      image:
-        src: ./media/index/i_get-started.svg
-      title: Om Microsoft Identity-plattformen
-    - href: /azure/active-directory/develop/azure-ad-developers-guide/
-      html: <p>Autentisera Azure AD-identiteter (arbets- och skolkonton) genom att begära token från slutpunkten Azure AD v1.0 med hjälp av Azure AD Authentication Library (ADAL), Azure-portalen och Azure AD Graph API.</p>
-      image:
-        src: ./media/index/i_advanced.svg
-      title: V1.0
-    - href: /azure/active-directory/develop/v2-overview
-      html: <p>Autentisera en bredare uppsättning Microsoft-identiteter via slutpunkten Azure AD v2.0 med hjälp av Microsoft Authentication Library (MSAL), Azure-portalen och Microsoft Graph API.</p>
-      image:
-        src: ./media/index/i_investigate.svg
-      title: v2.0
-- title: Snabbstarter
-  items:
-  - type: paragraph
-    text: Följ anvisningarna i dessa snabbstarter för att snabbt bygga en app och lägga till funktioner som att hämta tokens, uppdatera tokens, logga in en användare, visa användarinformation med mera.
-  - type: paragraph
-    text: <b>Enkelsidiga appar</b>
-  - type: table
-    style: dataMatrix
-    columns:
-    - image:
-        src: ./media/index/angularjs-shield.svg
-      title: AngularJS
-    - image:
-        src: ./media/index/logo_js.svg
-      title: JavaScript
-    rows:
-    - title: V1.0
-      values:
-      - href: quickstart-v1-angularjs-spa.md
-      - href: https://github.com/Azure-Samples/active-directory-javascript-singlepageapp-dotnet-webapi
-    - title: v2.0
-      values:
-      - href: 
-      - href: quickstart-v2-javascript.md
-  - type: paragraph
-    text: <b>Webbappar</b>
-  - type: table
-    style: dataMatrix
-    columns:
-    - image:
-        src: ./media/index/logo_NET.svg
-      title: ASP .NET
-    - image:
-        src: ./media/index/logo_NETcore.svg
-      title: ASP.NET Core
-    - image:
-        src: ./media/index/logo_java.svg
-      title: Java
-    - image:
-        src: ./media/index/logo_nodejs.svg
-      title: NodeJS
-    - image:
-        src: ./media/index/logo_python.svg
-      title: Python
-    rows:
-    - title: V1.0
-      values:
-      - href: quickstart-v1-aspnet-webapp.md
-      - href: 
-      - href: https://github.com/Azure-Samples/active-directory-java-webapp-openidconnect
-      - href: quickstart-v1-openid-connect-code.md
-      - href: https://github.com/Azure-Samples/active-directory-python-webapp-graphapi
-    - title: v2.0
-      values:
-      - href: quickstart-v2-aspnet-webapp.md
-      - href: quickstart-v2-aspnet-core-webapp.md
-      - href: 
-      - href: https://github.com/AzureADQuickStarts/AppModelv2-WebApp-OpenIDConnect-nodejs
-      - href: 
-  - type: paragraph
-    text: <b>Webb-API:er</b>
-  - type: table
-    style: dataMatrix
-    columns:
-    - image:
-        src: ./media/index/logo_NET.svg
-      title: ASP .NET
-    - image:
-        src: ./media/index/logo_NETcore.svg
-      title: ASP.NET Core
-    - image:
-        src: ./media/index/logo_nodejs.svg
-      title: NodeJS
-    rows:
-    - title: V1.0
-      values:
-      - href: quickstart-v1-dotnet-webapi.md
-      - href: 
-      - href: quickstart-v1-nodejs-webapi.md
-    - title: v2.0
-      values:
-      - href: https://github.com/azureadquickstarts/appmodelv2-nativeclient-dotnet
-      - href: https://azure.microsoft.com/resources/samples/active-directory-dotnet-native-aspnetcore-v2
-      - href: 
-  - type: paragraph
-    text: <b>Mobilappar och skrivbordsappar</b>
-  - type: table
-    style: dataMatrix
-    columns:
-    - image:
-        src: ./media/index/logo_android.svg
-      title: Android
-    - image:
-        src: ./media/index/logo_ios.svg
-      title: iOS
-    - image:
-        src: ./media/index/logo_Windows.svg
-      title: Universell Windows-plattform
-    - image:
-        src: ./media/index/logo_Windows.svg
-      title: .NET för Windows-skrivbordet
-    - image:
-        src: ./media/index/logo_xamarin.svg
-      title: Xamarin
-    rows:
-    - title: V1.0
-      values:
-      - href: quickstart-v1-android.md
-      - href: quickstart-v1-ios.md
-      - href: 
-      - href: quickstart-v1-dotnet.md
-      - href: quickstart-v1-xamarin.md
-    - title: v2.0
-      values:
-      - href: quickstart-v2-android.md
-      - href: quickstart-v2-ios.md
-      - href: quickstart-v2-uwp.md
-      - href: quickstart-v2-windows-desktop.md
-      - href: 
-  - type: paragraph
-    text: <b>Tjänst-till-tjänst och daemonappar</b>
-  - type: table
-    style: dataMatrix
-    columns:
-    - image:
-        src: ./media/index/logo_NET.svg
-      title: .NET
-    rows:
-    - title: V1.0
-      values:
-      - href: sample-v1-code.md
-    - title: v2.0
-      values:
-      - href: quickstart-v2-netcore-daemon.md
-- title: Stegvisa självstudier
-  items:
-  - type: paragraph
-    text: Använd Microsoft Identity-plattformen och följ djupgående scenariobaserade procedurer för högre utvecklaruppgifter, till exempel att hämta åtkomsttoken, implementera inloggning med Microsoft, med mera.
-  - type: paragraph
-    text: <b>Enkelsidiga appar</b>
-  - type: table
-    style: dataMatrix
-    columns:
-    - image:
-        src: ./media/index/logo_js.svg
-      title: JavaScript
-    rows:
-    - title: V1.0
-      values:
-      - href: 
-    - title: v2.0
-      values:
-      - href: tutorial-v2-javascript-spa.md
-  - type: paragraph
-    text: <b>Webbappar</b>
-  - type: table
-    style: dataMatrix
-    columns:
-    - image:
-        src: ./media/index/logo_NET.svg
-      title: ASP .NET
-    rows:
-    - title: V1.0
-      values:
-      - href: 
-    - title: v2.0
-      values:
-      - href: tutorial-v2-asp-webapp.md
-  - type: paragraph
-    text: <b>Mobilappar och skrivbordsappar</b>
-  - type: table
-    style: dataMatrix
-    columns:
-    - image:
-        src: ./media/index/logo_android.svg
-      title: Android
-    - image:
-        src: ./media/index/logo_ios.svg
-      title: iOS
-    - image:
-        src: ./media/index/logo_Windows.svg
-      title: Universell Windows-plattform
-    - image:
-        src: ./media/index/logo_Windows.svg
-      title: .NET för Windows-skrivbordet
-    rows:
-    - title: V1.0
-      values:
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-    - title: v2.0
-      values:
-      - href: tutorial-v2-android.md
-      - href: tutorial-v2-ios.md
-      - href: tutorial-v2-windows-uwp.md
-      - href: tutorial-v2-windows-desktop.md
-- title: Exempel
-  items:
-  - type: paragraph
-    text: 'Hitta kodexempel beroende på vilken typ av app som du utvecklar, din plattform och API: er som du använder.'
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: 'Följ anvisningarna i dessa snabbstarter för att snabbt bygga en app och lägga till funktioner som att hämta tokens, uppdatera tokens, logga in en användare, visa användarinformation med mera.'
+      - type: paragraph
+        text: <b>Enkelsidiga appar</b>
+      - type: table
+        style: dataMatrix
+        columns:
+          - image:
+              src: ./media/index/angularjs-shield.svg
+            title: AngularJS
+          - image:
+              src: ./media/index/logo_js.svg
+            title: JavaScript
+        rows:
+          - title: V1.0
+            values:
+              - href: quickstart-v1-angularjs-spa.md
+              - href: 'https://github.com/Azure-Samples/active-directory-javascript-singlepageapp-dotnet-webapi'
+          - title: v2.0
+            values:
+              - href: null
+              - href: quickstart-v2-javascript.md
+      - type: paragraph
+        text: <b>Webbappar</b>
+      - type: table
+        style: dataMatrix
+        columns:
+          - image:
+              src: ./media/index/logo_NET.svg
+            title: ASP .NET
+          - image:
+              src: ./media/index/logo_NETcore.svg
+            title: ASP.NET Core
+          - image:
+              src: ./media/index/logo_java.svg
+            title: Java
+          - image:
+              src: ./media/index/logo_nodejs.svg
+            title: NodeJS
+          - image:
+              src: ./media/index/logo_python.svg
+            title: Python
+        rows:
+          - title: V1.0
+            values:
+              - href: quickstart-v1-aspnet-webapp.md
+              - href: null
+              - href: 'https://github.com/Azure-Samples/active-directory-java-webapp-openidconnect'
+              - href: quickstart-v1-openid-connect-code.md
+              - href: 'https://github.com/Azure-Samples/active-directory-python-webapp-graphapi'
+          - title: v2.0
+            values:
+              - href: quickstart-v2-aspnet-webapp.md
+              - href: quickstart-v2-aspnet-core-webapp.md
+              - href: null
+              - href: 'https://github.com/AzureADQuickStarts/AppModelv2-WebApp-OpenIDConnect-nodejs'
+              - href: null
+      - type: paragraph
+        text: '<b>Webb-API:er</b>'
+      - type: table
+        style: dataMatrix
+        columns:
+          - image:
+              src: ./media/index/logo_NET.svg
+            title: ASP .NET
+          - image:
+              src: ./media/index/logo_NETcore.svg
+            title: ASP.NET Core
+          - image:
+              src: ./media/index/logo_nodejs.svg
+            title: NodeJS
+        rows:
+          - title: V1.0
+            values:
+              - href: quickstart-v1-dotnet-webapi.md
+              - href: null
+              - href: quickstart-v1-nodejs-webapi.md
+          - title: v2.0
+            values:
+              - href: 'https://github.com/azureadquickstarts/appmodelv2-nativeclient-dotnet'
+              - href: 'https://azure.microsoft.com/resources/samples/active-directory-dotnet-native-aspnetcore-v2'
+              - href: null
+      - type: paragraph
+        text: <b>Mobilappar och skrivbordsappar</b>
+      - type: table
+        style: dataMatrix
+        columns:
+          - image:
+              src: ./media/index/logo_android.svg
+            title: Android
+          - image:
+              src: ./media/index/logo_ios.svg
+            title: iOS
+          - image:
+              src: ./media/index/logo_Windows.svg
+            title: Universell Windows-plattform
+          - image:
+              src: ./media/index/logo_Windows.svg
+            title: .NET för Windows-skrivbordet
+          - image:
+              src: ./media/index/logo_xamarin.svg
+            title: Xamarin
+        rows:
+          - title: V1.0
+            values:
+              - href: quickstart-v1-android.md
+              - href: quickstart-v1-ios.md
+              - href: null
+              - href: quickstart-v1-dotnet.md
+              - href: quickstart-v1-xamarin.md
+          - title: v2.0
+            values:
+              - href: quickstart-v2-android.md
+              - href: quickstart-v2-ios.md
+              - href: quickstart-v2-uwp.md
+              - href: quickstart-v2-windows-desktop.md
+              - href: null
+      - type: paragraph
+        text: <b>Tjänst-till-tjänst och daemonappar</b>
+      - type: table
+        style: dataMatrix
+        columns:
+          - image:
+              src: ./media/index/logo_NET.svg
+            title: .NET
+        rows:
+          - title: V1.0
+            values:
+              - href: sample-v1-code.md
+          - title: v2.0
+            values:
+              - href: quickstart-v2-netcore-daemon.md
+  - title: Stegvisa självstudier
     items:
-    - html: <a href="/azure/active-directory/develop/sample-v1-code">v1.0-kodexempel efter scenario</a>
-    - html: <a href="/azure/active-directory/develop/sample-v2-code">v2.0-kodexempel efter scenario</a>
+      - type: paragraph
+        text: 'Använd Microsoft Identity-plattformen och följ djupgående scenariobaserade procedurer för högre utvecklaruppgifter, till exempel att hämta åtkomsttoken, implementera inloggning med Microsoft, med mera.'
+      - type: paragraph
+        text: <b>Enkelsidiga appar</b>
+      - type: table
+        style: dataMatrix
+        columns:
+          - image:
+              src: ./media/index/logo_js.svg
+            title: JavaScript
+        rows:
+          - title: V1.0
+            values:
+              - href: null
+          - title: v2.0
+            values:
+              - href: tutorial-v2-javascript-spa.md
+      - type: paragraph
+        text: <b>Webbappar</b>
+      - type: table
+        style: dataMatrix
+        columns:
+          - image:
+              src: ./media/index/logo_NET.svg
+            title: ASP .NET
+        rows:
+          - title: V1.0
+            values:
+              - href: null
+          - title: v2.0
+            values:
+              - href: tutorial-v2-asp-webapp.md
+      - type: paragraph
+        text: <b>Mobilappar och skrivbordsappar</b>
+      - type: table
+        style: dataMatrix
+        columns:
+          - image:
+              src: ./media/index/logo_android.svg
+            title: Android
+          - image:
+              src: ./media/index/logo_ios.svg
+            title: iOS
+          - image:
+              src: ./media/index/logo_Windows.svg
+            title: Universell Windows-plattform
+          - image:
+              src: ./media/index/logo_Windows.svg
+            title: .NET för Windows-skrivbordet
+        rows:
+          - title: V1.0
+            values:
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+          - title: v2.0
+            values:
+              - href: tutorial-v2-android.md
+              - href: tutorial-v2-ios.md
+              - href: tutorial-v2-windows-uwp.md
+              - href: tutorial-v2-windows-desktop.md
+  - title: Exempel
+    items:
+      - type: paragraph
+        text: 'Hitta kodexempel beroende på vilken typ av app som du utvecklar, din plattform och API: er som du använder.'
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="/azure/active-directory/develop/sample-v1-code">v1.0-kodexempel efter scenario</a>
+          - html: <a href="/azure/active-directory/develop/sample-v2-code">v2.0-kodexempel efter scenario</a>
