--- a/articles/notification-hubs/TOC.yml
+++ b/articles/notification-hubs/TOC.yml
@@ -15,16 +15,16 @@ items:
   items:
   - name: Android
     items:
-    - name: Skicka push-meddelanden till Android-enheter med hjälp av Firebase Cloud Messaging
+    - name: Skicka push-meddelanden med hjälp av Firebase Cloud Messaging
       href: notification-hubs-android-push-notification-google-fcm-get-started.md
-    - name: Skicka push-meddelanden till Android-enheter med hjälp av Google Cloud Messaging
+    - name: Skicka push-meddelanden med hjälp av Google Cloud Messaging
       href: notification-hubs-android-push-notification-google-gcm-get-started.md
+    - name: Skicka push-meddelanden till specifika enheter
+      href: notification-hubs-aspnet-backend-android-xplat-segmented-gcm-push-notification.md
+    - name: Skicka push-meddelanden till specifika användare
+      href: notification-hubs-aspnet-backend-gcm-android-push-to-user-google-notification.md
     - name: Skicka push-meddelanden till Xamarin Android-appar
       href: xamarin-notification-hubs-push-notifications-android-gcm.md
-    - name: Skicka push-meddelanden till specifika Android-enheter
-      href: notification-hubs-aspnet-backend-android-xplat-segmented-gcm-push-notification.md
-    - name: Skicka push-meddelanden till specifika användare av Android-program
-      href: notification-hubs-aspnet-backend-gcm-android-push-to-user-google-notification.md
   - name: Baidu
     items:
     - name: Skicka push-meddelanden med hjälp av Baidu Cloud Push
@@ -37,31 +37,31 @@ items:
     items:
     - name: Skicka push-meddelanden till iOS-appar
       href: notification-hubs-ios-apple-push-notification-apns-get-started.md
-    - name: Skicka push-meddelanden till Xamarin iOS-appar
-      href: xamarin-notification-hubs-ios-push-notification-apns-get-started.md
     - name: Skicka push-meddelanden till specifika enheter
       href: notification-hubs-ios-xplat-segmented-apns-push-notification.md
-    - name: Skicka push-meddelanden till iOS-enheter
-      href: notification-hubs-ios-xplat-localized-apns-push-notification.md
     - name: Skicka push-meddelanden till specifika användare
       href: notification-hubs-aspnet-backend-ios-apple-apns-notification.md
+    - name: Skicka push-meddelanden till Xamarin iOS-appar
+      href: xamarin-notification-hubs-ios-push-notification-apns-get-started.md
+    - name: Skicka push-meddelanden till iOS-enheter
+      href: notification-hubs-ios-xplat-localized-apns-push-notification.md
   - name: Kindle
     items:
-    - name: Skicka push-meddelanden till ett Kindle-program med hjälp av Amazon Device Messaging
+    - name: Skicka push-meddelanden med hjälp av Amazon Device Messaging
       href: notification-hubs-kindle-amazon-adm-push-notification.md
   - name: Windows Phone
     items:
-    - name: Skicka push-meddelanden till Windows Phone-appar
+    - name: Skicka push-meddelanden till appar
       href: notification-hubs-windows-mobile-push-notifications-mpns.md
-    - name: Skicka push-meddelanden till specifika Windows Phone-enheter
+    - name: Skicka push-meddelanden till specifika enheter
       href: notification-hubs-windows-phone-push-xplat-segmented-mpns-notification.md
   - name: Windows
     items:
     - name: Skicka push-meddelanden till appar för Universell Windows-plattform
       href: notification-hubs-windows-store-dotnet-get-started-wns-push-notification.md
-    - name: Skicka push-meddelanden till specifika Windows-enheter
+    - name: Skicka push-meddelanden till specifika enheter
       href: notification-hubs-windows-notification-dotnet-push-xplat-segmented-wns.md
-    - name: Skicka lokaliserade push-meddelanden till Windows-appar
+    - name: Skicka lokaliserade meddelanden till appar
       href: notification-hubs-windows-store-dotnet-xplat-localized-wns-push-notification.md
     - name: Skicka push-meddelanden till specifika användare
       href: notification-hubs-aspnet-backend-windows-dotnet-wns-notification.md
@@ -140,9 +140,7 @@ items:
     href: /dotnet/api/microsoft.azure.notificationhubs
   - name: PowerShell
     href: /powershell/module/az.notificationhubs
-  - name: REST-API för Notification Hubs-tjänsten
-    href: https://docs.microsoft.com/previous-versions/azure/reference/dn223264(v%3dazure.100)
-  - name: REST API för hantering
+  - name: REST
     href: /rest/api/notificationhubs/
   - name: Resource Manager-mall
     href: /azure/templates/microsoft.notificationhubs/allversions
@@ -168,9 +166,9 @@ items:
     href: https://azure.microsoft.com/regions/services/
   - name: Supportalternativ
     href: https://azure.microsoft.com/support/options/
-ms.openlocfilehash: 0d7708a44e953659e1904fe2bc3b79364ba33926
-ms.sourcegitcommit: f24b62e352e0512dfa2897362021b42e0cb9549d
+ms.openlocfilehash: 1a62b954144db057a19fc39069538f208a1bf035
+ms.sourcegitcommit: 1c2cf60ff7da5e1e01952ed18ea9a85ba333774c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 04/11/2019
-ms.locfileid: "59505337"
+ms.lasthandoff: 04/12/2019
+ms.locfileid: "59521809"
