--- a/articles/cognitive-services/LUIS/index.yml
+++ b/articles/cognitive-services/LUIS/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 9d8433debd31176b4cf4096a4b80cfbd9ddcba82
-ms.sourcegitcommit: 90c6b63552f6b7f8efac7f5c375e77526841a678
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 02/23/2019
-ms.locfileid: "56737271"
 documentType: LandingData
 title: Dokumentation om Language Understanding Intelligent Service (LUIS)
 metadata:
-  document_id: 
-  title: Language Understanding Intelligent Service (LUIS) – självstudier, snabbstarter, API-referens
+  document_id: null
+  title: 'Language Understanding Intelligent Service (LUIS) – självstudier, snabbstarter, API-referens'
   description: Lär dig mer om att använda Language Understanding-tjänsten så att ditt program kan förstå vad en person vill när den använder egna ord.
   author: nitinme
   manager: cgronlun
@@ -23,98 +17,98 @@ abstract:
   description: Language Understanding-tjänsten (LUIS) gör så att ditt program kan förstå vad en person vill när den använder egna ord. LUIS använder maskininlärning för att göra det möjligt för utvecklare att skapa program som kan ta emot indata från användaren i naturligt språk och sedan extrahera betydelse.
   aside:
     image:
-      alt: 
+      alt: null
       height: 110
       src: ../media/index/luis-landing-page-video.png
       width: 250
-    title: Senaste nytt för LUIS (18:28)
-    href: https://azure.microsoft.com/resources/videos/whats-new-with-language-understanding-service-luis
+    title: 'Senaste nytt för LUIS (18:28)'
+    href: 'https://azure.microsoft.com/resources/videos/whats-new-with-language-understanding-service-luis'
     width: 250
 sections:
-- items:
-  - type: list
-    style: cards
-    className: cardsM
-    columns: 3
+  - items:
+      - type: list
+        style: cards
+        className: cardsM
+        columns: 3
+        items:
+          - href: /azure/cognitive-services/luis/what-is-luis
+            html: <p>Lär dig mer om tjänsten Language Understanding (LUIS).</p>
+            image:
+              src: ../media/index/i_overview.svg
+            title: Vad är LUIS?
+          - href: /azure/cognitive-services/luis/luis-how-plan-your-app
+            html: <p>Skapa ett översikt av avsikter och entiteter som är relevanta för din app.</p>
+            image:
+              src: ../media/index/i_guidelines.svg
+            title: Planera LUIS-appen
+          - href: /azure/cognitive-services/luis/luis-concept-best-practices
+            html: <p>Följ dessa rekommenderade säkerhetsmetoder när du skapar en LUIS-app.</p>
+            image:
+              src: ../media/index/i_guidelines.svg
+            title: Bästa metoder för en LUIS-app
+  - title: Snabbstarter på 5 minuter
     items:
-    - href: /azure/cognitive-services/luis/what-is-luis
-      html: <p>Lär dig mer om tjänsten Language Understanding (LUIS).</p>
-      image:
-        src: ../media/index/i_overview.svg
-      title: Vad är LUIS?
-    - href: /azure/cognitive-services/luis/luis-how-plan-your-app
-      html: <p>Skapa ett översikt av avsikter och entiteter som är relevanta för din app.</p>
-      image:
-        src: ../media/index/i_guidelines.svg
-      title: Planera LUIS-appen
-    - href: /azure/cognitive-services/luis/luis-concept-best-practices
-      html: <p>Följ dessa rekommenderade säkerhetsmetoder när du skapar en LUIS-app.</p>
-      image:
-        src: ../media/index/i_guidelines.svg
-      title: Bästa metoder för en LUIS-app
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: table
-    style: dataMatrix
-    columns:
-    - image:
-        src: media/index/logo_csharp.svg
-    - image:
-        src: media/index/logo_java.svg
-    - image:
-        src: media/index/logo_nodejs.svg
-    - image:
-        src: media/index/logo_python.svg
-    rows:
-    - title: Slutpunkts-API
-      values:
-      - href: luis-get-started-cs-get-intent
-      - href: luis-get-started-java-get-intent
-      - href: luis-get-started-node-get-intent
-      - href: luis-get-started-python-get-intent
-    - title: Redigera API
-      values:
-      - href: luis-get-started-cs-add-utterance
-      - href: luis-get-started-java-add-utterance
-      - href: luis-get-started-node-add-utterance
-      - href: luis-get-started-python-add-utterance
-- title: Stegvisa självstudier
-  items:
-  - type: list
-    style: ordered
+      - type: table
+        style: dataMatrix
+        columns:
+          - image:
+              src: media/index/logo_csharp.svg
+          - image:
+              src: media/index/logo_java.svg
+          - image:
+              src: media/index/logo_nodejs.svg
+          - image:
+              src: media/index/logo_python.svg
+        rows:
+          - title: Slutpunkts-API
+            values:
+              - href: luis-get-started-cs-get-intent
+              - href: luis-get-started-java-get-intent
+              - href: luis-get-started-node-get-intent
+              - href: luis-get-started-python-get-intent
+          - title: Redigera API
+            values:
+              - href: luis-get-started-cs-add-utterance
+              - href: luis-get-started-java-add-utterance
+              - href: luis-get-started-node-add-utterance
+              - href: luis-get-started-python-add-utterance
+  - title: Stegvisa självstudier
     items:
-    - html: <a href="luis-quickstart-intents-only">Skapa en app för HR-domänen (Human Resources)</a>
-    - html: <a href="luis-tutorial-prebuilt-intents-entities">Lägga till fördefinierade avsikter och entiteter</a>
-    - html: <a href="luis-quickstart-intents-regex-entity">Lägga till entitet för reguljära uttryck</a>
-    - html: <a href="luis-quickstart-intent-and-list-entity">Lägga till listentitet</a>
-    - html: <a href="luis-quickstart-intent-and-hier-entity">Lägga till hierarkisk entitet</a>
-    - html: <a href="luis-quickstart-primary-and-secondary-data">Lägga till en enkel entitet och fraslista</a>
-    - html: <a href="luis-quickstart-intent-and-key-phrase">Lägga till keyPhrase-entitet</a>
-    - html: <a href="luis-quickstart-intent-and-sentiment-analysis">Lägga till attitydanalys</a>
-- title: Exempel
-  items:
-  - type: list
-    style: unordered
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="luis-quickstart-intents-only">Skapa en app för HR-domänen (Human Resources)</a>
+          - html: <a href="luis-tutorial-prebuilt-intents-entities">Lägga till fördefinierade avsikter och entiteter</a>
+          - html: <a href="luis-quickstart-intents-regex-entity">Lägga till entitet för reguljära uttryck</a>
+          - html: <a href="luis-quickstart-intent-and-list-entity">Lägga till listentitet</a>
+          - html: <a href="tutorial-entity-roles">Använda entitetsroller</a>
+          - html: <a href="luis-quickstart-primary-and-secondary-data">Lägga till en enkel entitet och fraslista</a>
+          - html: <a href="luis-quickstart-intent-and-key-phrase">Lägga till keyPhrase-entitet</a>
+          - html: <a href="luis-quickstart-intent-and-sentiment-analysis">Lägga till attitydanalys</a>
+  - title: Exempel
     items:
-    - html: <a href="https://aka.ms/luis-code-samples">Exempel på GitHub</a><br/>
-- title: Videoklipp
-  items:
-  - type: list
-    style: unordered
+      - type: list
+        style: unordered
+        items:
+          - html: '<a href="https://aka.ms/luis-code-samples">Exempel på GitHub</a><br/>'
+  - title: Videoklipp
     items:
-    - html: <a href="https://channel9.msdn.com/Shows/Azure-Friday/At-Build-2018-Cognitive-Services-Language-LUIS/player" >Azure Friday på Build 2018 – Cognitive Services – Language Understanding (LUIS)</a>
-    - html: <a href="https://channel9.msdn.com/events/Build/2018/BRK3208" >Session på Build 2018 – Robotintelligens, talfunktioner och regelverk för NLU</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: list
+        style: unordered
+        items:
+          - html: '<a href="https://channel9.msdn.com/Shows/Azure-Friday/At-Build-2018-Cognitive-Services-Language-LUIS/player" >Azure Friday på Build 2018 – Cognitive Services – Language Understanding (LUIS)</a>'
+          - html: '<a href="https://channel9.msdn.com/events/Build/2018/BRK3208" >Session på Build 2018 – Robotintelligens, talfunktioner och regelverk för NLU</a>'
+  - title: Referens
     items:
-    - title: REST API v2
-      html: <p><a href="https://aka.ms/luis-endpoint-apis">Slutpunkts-API</a></p><p><a href="https://aka.ms/luis-authoring-apis">Redigera API</a></p>
-    - title: SDK:er
-      html: <p><a href="https://aka.ms/luis-endpoint-sdk">Slutpunkt för .NET SDK</a></p><p><a href="https://aka.ms/luis-authoring-sdk">Redigera .NET SDK</a></p>
-    - title: PowerShell
-      html: <p><a href=https://docs.microsoft.com/powershell/module/az.cognitiveservices/#cognitive_services">Azure PowerShell</a></p>
-    - title: CLI
-      html: <p><a href="https://docs.microsoft.com/cli/azure/cognitiveservices">Azure CLI</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: REST API v2
+            html: '<p><a href="https://aka.ms/luis-endpoint-apis">Slutpunkts-API</a></p><p><a href="https://aka.ms/luis-authoring-apis">Redigera API</a></p>'
+          - title: 'SDK:er'
+            html: '<p><a href="https://aka.ms/luis-endpoint-sdk">Slutpunkt för .NET SDK</a></p><p><a href="https://aka.ms/luis-authoring-sdk">Redigera .NET SDK</a></p>'
+          - title: PowerShell
+            html: '<p><a href=https://docs.microsoft.com/powershell/module/az.cognitiveservices/#cognitive_services">Azure PowerShell</a></p>'
+          - title: CLI
+            html: '<p><a href="https://docs.microsoft.com/cli/azure/cognitiveservices">Azure CLI</a></p>'
