--- a/articles/virtual-machines/windows/sql/TOC.yml
+++ b/articles/virtual-machines/windows/sql/TOC.yml
@@ -1,7 +1,7 @@
 items:
 - name: Översikt
   items:
-  - name: Om virtuella Windows SQL Server-datorer
+  - name: Vad är en virtuell SQL Server-dator?
     href: virtual-machines-windows-sql-server-iaas-overview.md
   - name: Viktig information
     href: virtual-machines-windows-sql-server-iaas-release-notes.md
@@ -71,7 +71,7 @@ items:
         href: virtual-machines-windows-sql-availability-group-cli.md
       - name: Mall för Azure-portalen
         href: virtual-machines-windows-portal-sql-alwayson-availability-groups.md
-      - name: Azure-snabbstartmallar
+      - name: Azure-snabbstartsmallar
         href: virtual-machines-windows-sql-availability-group-quickstart-template.md
       - name: Flera regioner
         href: virtual-machines-windows-portal-sql-availability-group-dr.md
@@ -121,9 +121,9 @@ items:
     href: https://social.msdn.microsoft.com/Forums/en-US/home?forum=WAVirtualMachinesforWindows&filter=alltypes&brandIgnore=True&sort=relevancedesc&searchTerm=SQL+Server
   - name: Stack Overflow
     href: https://stackoverflow.com/search?q=%5Bazure-virtual-machine%5D+sql+server
-ms.openlocfilehash: 4e3e565bd700bb4106028e98a2a7833707561376
-ms.sourcegitcommit: 02d17ef9aff49423bef5b322a9315f7eab86d8ff
+ms.openlocfilehash: 09375cbc3ca114ea45787607e36f8fd7f87d4c92
+ms.sourcegitcommit: 031e4165a1767c00bb5365ce9b2a189c8b69d4c0
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/21/2019
-ms.locfileid: "58340633"
+ms.lasthandoff: 04/13/2019
+ms.locfileid: "59547422"
